--- a/Toast_Message/style.css
+++ b/Toast_Message/style.css
@@ -1,4 +1,3 @@
-
 /* ======= Toast message ======== */
 #toast {
     position: fixed;
@@ -10,6 +9,7 @@
 .toast {
     font-family: "Helvetica Neue";
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
     background-color: #125a62;
@@ -26,6 +26,7 @@
         opacity: 0;
         transform: translateX(calc(100% + 32px));
     }
+
     to {
         opacity: 1;
         transform: translateX(0);
@@ -39,7 +40,7 @@
 }
 
 .toast--success {
-    border-color: #47d864;    
+    border-color: #47d864;
 }
 
 .toast--success .toast__icon {
@@ -47,7 +48,7 @@
 }
 
 .toast--warning {
-    border-color: #ffc012;    
+    border-color: #ffc012;
 }
 
 .toast--warning .toast__icon {
@@ -55,7 +56,7 @@
 }
 
 .toast--error {
-    border-color: #ff623d;    
+    border-color: #ff623d;
 }
 
 .toast--error .toast__icon {
@@ -63,7 +64,7 @@
 }
 
 .toast--info {
-    border-color: #2f86eb;    
+    border-color: #2f86eb;
 }
 
 .toast--info .toast__icon {
@@ -71,7 +72,7 @@
 }
 
 
-.toast + .toast {
+.toast+.toast {
     margin-top: 8px;
 }
 
@@ -93,6 +94,7 @@
     color: #ccc;
     margin-top: 0;
     line-height: 1.5;
+    text-align: center;
 }
 
 .toast__close {
@@ -109,7 +111,7 @@
 @media (max-width: 46.1875em) {
     #toast {
         right: 50%;
-        transform: translateX(+50%) ;
+        transform: translateX(+50%);
     }
 
     .toast {
@@ -119,5 +121,10 @@
 
     .toast__msg {
         font-size: 18px;
+    }
+
+    .toast__icon,
+    .toast__close {
+        padding: 0 10px;
     }
 }
